# CurlX

./: CMakeLists.txt  CurlXConfig.cmake.in  README.md  main.cpp
.github/workflows/: build.yml
docs/: advanced.md  api_reference.md  getting_started.md  overview.md
include/CurlX/: Auth.hpp  Body.hpp  Client.hpp  Cookies.hpp  CurlX.hpp  Delete.hpp  Exceptions.hpp  Files.hpp  Get.hpp  Head.hpp  HeaderOutputStream.hpp  Headers.hpp  Method.hpp  Options.hpp  Params.hpp  Patch.hpp  Post.hpp  Proxy.hpp  Put.hpp  Redirects.hpp  Request.hpp  Response.hpp  Session.hpp  Timeout.hpp  Url.hpp  Verify.hpp
src/: Client.cpp  Cookies.cpp  Get.cpp  HeaderOutputStream.cpp  Headers.cpp  Method.cpp  Response.cpp  Session.cpp
tests/: CMakeLists.txt  test_cookies.cpp  test_headers.cpp  test_optimization.cpp  test_unit.cpp  test_url.cpp
